# functions/lib/middleware/validate.js
@@ -6,6 +6,7 @@ Object.defineProperty(exports, "__esModule", { value: true });
 exports.requireParam = requireParam;
 exports.requireEventId = requireEventId;
 exports.requireSessionId = requireSessionId;
+exports.requireSpeakerId = requireSpeakerId;
 function requireParam(name) {
     return (req, res, next) => {
         const value = req.params[name];
@@ -24,5 +25,8 @@ function requireEventId(req, res, next) {
 }
 function requireSessionId(req, res, next) {
     requireParam("sessionId")(req, res, next);
+}
+function requireSpeakerId(req, res, next) {
+    requireParam("speakerId")(req, res, next);
 }
 //# sourceMappingURL=validate.js.map
